ChangeLog PeerGuardian Linux (pgl)

pgl 2.1.3~WIP

  [jre]
  * added "+" to default nice values (+0 for pgld). Fixes problems with Redhat's
    init functions.
  * fixed Makefile to keep default setting "use builtin LSB init functions".
  * impoved output of show_config to show the version of the LSB init functions.

  [freemind]
  * fixed pgl-gui crash due to missing braces in if clause.

-- jre <jre-phoenix@users.sourceforge.net>  Mon, 29 Aug 2011 18:07:33 +0200


pgl 2.1.2

  [jre]
  * pgld/Makefile: moved LDFLAGS to end of rule. This should solve some
    issues with newer gcc versions
  * pgl-gui: swapped the restart and reload icons
  * documentation updates

  [freemind]
  pgl-gui:
  * fixed blank blocklist items, if blocklist is not from iblocklist.com
  * fixed temporary allowing with right-click in the log window
    kdesudo only accepts one command as argument, so execute all commands
    through the tmp script.
  * allow to specify the maximum log size (default 512 lines)
  * reduced window's minimum width and height.
  * removed unused mobloquer code
  * minor fixes

-- jre <jre-phoenix@users.sourceforge.net>  Tue, 23 Aug 2011 21:56:02 +0200


pgl 2.1.1

  [freemind]
  * pgl-gui:
    - maximum log size 512 lines
    - check if an whitelist item is already in pglcmd.conf

-- jre <jre-phoenix@users.sourceforge.net>  Sat, 13 Aug 2011 02:45:41 +0200


pgl 2.1.0 The GUI release!

  [ jimtb ]
  * fixed dbus implementation in pgld

  [freemind]
  * added new GUI: pgl-gui (C++, Qt)
    partly based on old mobloquer

  [ jre ]
  * LICENSE CHANGE: relicensed pgld and pglcmd to GPL v3 (or later)
  * IMPORTANT CHANGES:
    - removed default whitelisting of ports 80 (http) and 443 (https)
    - added atma/atma list to default blocklists, following recommendations on
      http://tbg.iblocklist.com/pages/faq.html
    - place local blocklists in LOCAL_BLOCKLIST_DIR (/etc/pgl/blocklists.local)
      instead of MASTER_BLOCKLIST_DIR
  * fixed: install pgld logrotate